Fixed error message getting cut off

--- a/frontend/styles/edit-modal.css
+++ b/frontend/styles/edit-modal.css
@@ -78,7 +78,7 @@
 }
 
 .field-error {
-    height: 15px;
+    height: 18px;
     max-width: 90% !important;
     font-size: 15px;
     padding-left: 8px;
